[package]
name = "tarpit-rs"
version = "0.1.0"
authors = ["dpoggi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="0.2", features=["full"]}
futures = "0.3"
rand = "0.7"
log = "0.4"
env_logger = "0.7"
uuid = { version = "0.8", features = ["v4"] }